--- a/actions.yml
+++ b/actions.yml
@@ -188,8 +188,11 @@ browser-actions/setup-firefox:
   v1:
     expires_at: 2025-08-01
   5b19b18df8c293aae9e77f0a936e9fdc358f543a:
-    expires_at: 2050-01-01
+    expires_at: 2025-09-08
     tag: v1
+  634a60ccd6599686158cf5a570481b4cd30455a2:
+    expires_at: 2050-01-01
+    tag: v1.5.4
 browser-actions/setup-geckodriver:
   5ef1526ed36211ab6cb531ec1cfb11f924ca2dee:
     expires_at: 2050-01-01
