--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -29,6 +29,7 @@
 - TobKed/label-when-approved-action@*
 - VirtusLab/scala-cli-setup@6fc878be89f1990f6599f4f6a2e52a252e54d9f9
 - VirtusLab/scala-cli-setup@ca54569bf13a29cd648721038a89c47c7921c060
+- VirtusLab/scala-cli-setup@6b3ba0ee6968ad077b859cb12246deabd2f7cb78
 - actions-cool/check-user-permission@*
 - actions-cool/issues-helper@*
 - actions-cool/maintain-one-comment@*
