--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -73,3 +73,4 @@ jobs:
       - uses: uraimo/run-on-arch-action@d94c13912ea685de38fccc1109385b83fd79427d  # v3.0.1
       - uses: vimtor/action-zip@5f1c4aa587ea41db1110df6a99981dbe19cee310  # v1
       - uses: slackapi/slack-github-action@485a9d42d3a73031f12ec201c457e2162c45d02d  # v2.0.0
+      - uses: mlugg/setup-zig@7dccf5e6d09267c55f815f2db29495f30ba2ebca  # v2.0.1
