--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -257,3 +257,4 @@
 - slackapi/slack-github-action@485a9d42d3a73031f12ec201c457e2162c45d02d
 - golangci/golangci-lint-action@1481404843c368bc19ca9406f87d6e0fc97bdcfd
 - golangci/golangci-lint-action@55c2c1448f86e01eaae002a5a3a9624417608d84
+- mlugg/setup-zig@7dccf5e6d09267c55f815f2db29495f30ba2ebca
