--- a/actions.yml
+++ b/actions.yml
@@ -571,8 +571,11 @@ ludeeus/action-shellcheck:
   1.1.0:
     expires_at: 2025-08-01
   94e0aab03ca135d11a35e5bfc14e6746dc56e7e9:
-    expires_at: 2050-01-01
+    expires_at: 2025-09-09
     tag: 1.1.0
+  00cae500b08a931fb5698e11e79bfbd38e612a38:
+    expires_at: 2050-01-01
+    tag: 2.0.0
 manusa/actions-setup-minikube:
   b589f2d61bf96695c546929c72b38563e856059d:
     expires_at: 2050-01-01
