--- a/actions.yml
+++ b/actions.yml
@@ -566,7 +566,10 @@ leafo/gh-actions-lua:
     keep: true
 leafo/gh-actions-luarocks:
   e65774a6386cb4f24e293dca7fc4ff89165b64c5:
+    expires_at: 2025-09-09
+  4c082a5fad45388feaeb0798dbd82dbd7dc65bca:
     expires_at: 2050-01-01
+    tag: v5
 ludeeus/action-shellcheck:
   1.1.0:
     expires_at: 2025-08-01
