--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -164,6 +164,7 @@
 - korandoru/setup-zig@92b649f4723a14798d8b3cf3b6168edb65d5b04e
 - leafo/gh-actions-lua@*
 - leafo/gh-actions-luarocks@e65774a6386cb4f24e293dca7fc4ff89165b64c5
+- leafo/gh-actions-luarocks@4c082a5fad45388feaeb0798dbd82dbd7dc65bca
 - ludeeus/action-shellcheck@1.1.0
 - ludeeus/action-shellcheck@94e0aab03ca135d11a35e5bfc14e6746dc56e7e9
 - ludeeus/action-shellcheck@00cae500b08a931fb5698e11e79bfbd38e612a38
