--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -36,6 +36,7 @@ jobs:
       - uses: docker://jekyll/jekyll@sha256:400b8d1569f118bca8a3a09a25f32803b00a55d1ea241feaf5f904d66ca9c625
       - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36  # v3.0.2
       - uses: erisu/apache-rat-action@3127a8c18f3bb10e91c60e835144085b31c5c463  # v1.2.0
+      - uses: erisu/license-checker-action@1c222d0c2f5898a4c40b8bd6fd6888650bd6f68a  # v2.0.0
       - uses: google-github-actions/auth@ba79af03959ebeac9769e648f473a284504d9193  # v2.1.10
       - uses: google-github-actions/setup-gcloud@77e7a554d41e2ee56fc945c52dfd3f33d12def9a
       - uses: graalvm/setup-graalvm@01ed653ac833fe80569f1ef9f25585ba2811baab  # v1
