--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -110,7 +110,7 @@
 - easimon/maximize-build-space@*
 - eps1lon/actions-label-merge-conflict@*
 - erisu/apache-rat-action@3127a8c18f3bb10e91c60e835144085b31c5c463
-- erisu/license-checker-action@*
+- erisu/license-checker-action@1c222d0c2f5898a4c40b8bd6fd6888650bd6f68a
 - gaurav-nelson/github-action-markdown-link-check@*
 - geekyeggo/delete-artifact@*
 - golang/govulncheck-action@*
