--- a/actions.yml
+++ b/actions.yml
@@ -401,8 +401,11 @@ golang/govulncheck-action:
     keep: true
 google-github-actions/auth:
   ba79af03959ebeac9769e648f473a284504d9193:
-    expires_at: 2050-01-01
+    expires_at: 2025-10-19
     tag: v2.1.10
+  140bb5113ffb6b65a7e9b937a81fa96cf5064462:
+    expires_at: 2050-01-01
+    tag: v2.1.11
 google-github-actions/setup-gcloud:
   77e7a554d41e2ee56fc945c52dfd3f33d12def9a:
     expires_at: 2050-01-01
