--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -115,6 +115,7 @@
 - geekyeggo/delete-artifact@*
 - golang/govulncheck-action@*
 - google-github-actions/auth@ba79af03959ebeac9769e648f473a284504d9193
+- google-github-actions/auth@140bb5113ffb6b65a7e9b937a81fa96cf5064462
 - google-github-actions/setup-gcloud@77e7a554d41e2ee56fc945c52dfd3f33d12def9a
 - gr2m/twitter-together@*
 - graalvm/setup-graalvm@v1
