--- a/actions.yml
+++ b/actions.yml
@@ -411,6 +411,8 @@ google-github-actions/auth:
     tag: v2.1.11
 google-github-actions/setup-gcloud:
   77e7a554d41e2ee56fc945c52dfd3f33d12def9a:
+    expires_at: 2025-10-19
+  6a7c903a70c8625ed6700fa299f5ddb4ca6022e9:
     expires_at: 2050-01-01
 gr2m/twitter-together:
   '*':
