--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -56,6 +56,7 @@
 - browser-actions/setup-firefox@v1
 - browser-actions/setup-firefox@5b19b18df8c293aae9e77f0a936e9fdc358f543a
 - browser-actions/setup-firefox@634a60ccd6599686158cf5a570481b4cd30455a2
+- browser-actions/setup-firefox@5914774dda97099441f02628f8d46411fcfbd208
 - browser-actions/setup-geckodriver@5ef1526ed36211ab6cb531ec1cfb11f924ca2dee
 - bufbuild/buf-breaking-action@*
 - bufbuild/buf-lint-action@*
