--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -188,6 +188,7 @@
 - nick-fields/retry@*
 - nwtgck/actions-netlify@v1.2
 - nwtgck/actions-netlify@ac1cb16858bada08a9c71a81240a85cfc3f72913
+- nwtgck/actions-netlify@4cbaf4c08f1a7bfa537d6113472ef4424e4eb654
 - ocaml/setup-ocaml@*
 - olafurpg/setup-scala@*
 - opentofu/setup-opentofu@v1
