--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -249,6 +249,7 @@
 - timonvs/pr-labeler-action@*
 - untitaker/hyperlink@0.1.21
 - untitaker/hyperlink@d277930ba480c61cd3dd1a0caf0d18acfed294a6
+- untitaker/hyperlink@e66bb17cc9ae341677431edec3b893a0aa6ac747
 - uraimo/run-on-arch-action@v2
 - uraimo/run-on-arch-action@ac33288c3728ca72563c97b8b88dda5a65a84448
 - uraimo/run-on-arch-action@d94c13912ea685de38fccc1109385b83fd79427d
