--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -184,6 +184,7 @@
 - mvasigh/dispatch-action@*
 - nanasess/setup-chromedriver@*
 - ncipollo/release-action@1e3e9c6637e5566e185b7ab66f187539c5a76da7
+- ncipollo/release-action@bcfe5470707e8832e12347755757cec0eb3c22af
 - neofinancial/ticket-check-action@v2.0.0
 - neofinancial/ticket-check-action@609d901d5130a4bbd7d9f62931082ed67f855891
 - nick-fields/retry@*
