--- a/actions.yml
+++ b/actions.yml
@@ -429,8 +429,11 @@ graalvm/setup-graalvm:
   v1:
     expires_at: 2025-08-01
   01ed653ac833fe80569f1ef9f25585ba2811baab:
-    expires_at: 2050-01-01
+    expires_at: 2025-10-19
     tag: v1
+  7f488cf82a3629ee755e4e97342c01d6bed318fa:
+    expires_at: 2050-01-01
+    tag: v1.3.5
 gradle/wrapper-validation-action:
   '*':
     expires_at: 2050-01-01
