--- a/actions.yml
+++ b/actions.yml
@@ -98,7 +98,10 @@ JustinBeckwith/linkinator-action:
     tag: v1.11.0
 Kesin11/actions-timeline:
   427ee2cf860166e404d0d69b4f2b24012bb7af4f:
+    expires_at: 2025-10-19
+  a7eaabf426cdae26c3582c3fa674b897170dec8f:
     expires_at: 2050-01-01
+    tag: v2.2.4
 PyO3/maturin-action:
   '*':
     expires_at: 2025-08-01
