--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -26,6 +26,7 @@
 - JustinBeckwith/linkinator-action@v1.11.0
 - JustinBeckwith/linkinator-action@3d5ba091319fa7b0ac14703761eebb7d100e6f6d
 - Kesin11/actions-timeline@427ee2cf860166e404d0d69b4f2b24012bb7af4f
+- Kesin11/actions-timeline@a7eaabf426cdae26c3582c3fa674b897170dec8f
 - PyO3/maturin-action@*
 - TobKed/label-when-approved-action@*
 - VirtusLab/scala-cli-setup@6fc878be89f1990f6599f4f6a2e52a252e54d9f9
