--- a/actions.yml
+++ b/actions.yml
@@ -746,8 +746,11 @@ pypa/cibuildwheel:
     expires_at: 2025-09-08
     tag: v2.12.0
   5f22145df44122af0f5a201f93cf0207171beca7:
-    expires_at: 2050-01-01
+    expires_at: 2025-10-19
     tag: v3.0.0
+  e6de07ed3921b51089aae6981989889cf1eddd0c:
+    expires_at: 2050-01-01
+    tag: v3.1.1
 pytooling/actions:
   '*':
     expires_at: 2025-08-01
