--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -268,3 +268,4 @@
 - golangci/golangci-lint-action@1481404843c368bc19ca9406f87d6e0fc97bdcfd
 - golangci/golangci-lint-action@55c2c1448f86e01eaae002a5a3a9624417608d84
 - mlugg/setup-zig@7dccf5e6d09267c55f815f2db29495f30ba2ebca
+- mlugg/setup-zig@8d6198c65fb0feaa111df26e6b467fea8345e46f
