Update actions.yml and approved_actions.yml based on .github/workflows/dummy.yml
Generated by .github/workflows/update_actions.yml

--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -205,6 +205,7 @@
 - peaceiris/actions-hugo@*
 - peaceiris/actions-mdbook@*
 - peter-evans/create-or-update-comment@c9fcb64660bc90ec1cc535646af190c992007c32
+- peter-evans/create-or-update-comment@71345be0265236311c031f5c7866368bd1eff043
 - peter-evans/create-pull-request@*
 - phoenix-actions/test-reporting@v15
 - phoenix-actions/test-reporting@f957cd93fc2d848d556fa0d03c57bc79127b6b5e
