--- a/actions.yml
+++ b/actions.yml
@@ -704,7 +704,10 @@ peaceiris/actions-mdbook:
     keep: true
 peter-evans/create-or-update-comment:
   c9fcb64660bc90ec1cc535646af190c992007c32:
+    expires_at: 2025-10-19
+  71345be0265236311c031f5c7866368bd1eff043:
     expires_at: 2050-01-01
+    tag: v4.0.0
 peter-evans/create-pull-request:
   '*':
     expires_at: 2025-08-01
