--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -149,6 +149,7 @@
 - ilammy/msvc-dev-cmd@*
 - ilammy/setup-nasm@v1
 - ilammy/setup-nasm@e77cc62a22a374a4d0668286007cc3e3b4c17760
+- ilammy/setup-nasm@72793074d3c8cdda771dba85f6deafe00623038b
 - jarvusinnovations/background-action@*
 - jasonetco/create-an-issue@v2
 - jasonetco/create-an-issue@1b14a70e4d8dc185e5cc76d3bec9eab20257b2c5
