--- a/actions.yml
+++ b/actions.yml
@@ -693,8 +693,11 @@ orhun/git-cliff-action:
   v4:
     expires_at: 2025-08-01
   4a4a951bc43fafe41cd2348d181853f52356bee7:
-    expires_at: 2050-01-01
+    expires_at: 2025-10-20
     tag: v4
+  98c93442bb05a455a77bee982867857ae748eeea:
+    expires_at: 2050-01-01
+    tag: v4.5.1
 ossf/scorecard-action:
   '*':
     expires_at: 2025-08-01
