--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -203,6 +203,7 @@
 - oracle-actions/setup-java@*
 - orhun/git-cliff-action@v4
 - orhun/git-cliff-action@4a4a951bc43fafe41cd2348d181853f52356bee7
+- orhun/git-cliff-action@98c93442bb05a455a77bee982867857ae748eeea
 - ossf/scorecard-action@*
 - peaceiris/actions-gh-pages@*
 - peaceiris/actions-hugo@*
