--- a/actions.yml
+++ b/actions.yml
@@ -726,11 +726,14 @@ scacap/action-surefire-report:
     keep: true
 scala-steward-org/scala-steward-action:
   5021652c555c5724af574758b78ea5be49640007:
-    expires_at: 2050-01-01
+    expires_at: 2025-10-25
     tag: v2.75.0
   '*':
     expires_at: 2025-08-01
     keep: true
+  961c41c9fd3dc8a0f1f8dd59d60d071e17348ae8:
+    expires_at: 2050-01-01
+    tag: v2.76.0
 scalacenter/sbt-dependency-submission:
   64084844d2b0a9b6c3765f33acde2fbe3f5ae7d3:
     expires_at: 2050-01-01
