--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -29,13 +29,13 @@ jobs:
   pre-commit:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
         with:
           persist-credentials: false
 
       - name: Run pre-commit checks
         run: |
           pipx install uv
+          uv venv
           uv pip install pre-commit
-          pre-commit install
-          pre-commit run --all-files --color always --show-diff-on-failure
+          uv run pre-commit run --all-files --color always --show-diff-on-failure
