--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Run pre-commit checks
         run: |
-          pipx install uv
+          curl -LsSf https://astral.sh/uv/install.sh | sh
           uv venv
           uv pip install pre-commit
           uv run pre-commit run --all-files --color always --show-diff-on-failure
