--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Run pre-commit checks
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
-          uv venv
-          uv pip install pre-commit
-          uv run pre-commit run --all-files --color always --show-diff-on-failure
+          uv tool install pre-commit
+          uv tool ensure-path
+          # not sure if we need to source .bashrc here :) 
+          pre-commit run --all-files --color always --show-diff-on-failure
