--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -37,6 +37,5 @@ jobs:
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
           uv tool install pre-commit
-          uv tool ensure-path
-          # not sure if we need to source .bashrc here :) 
+          uv tool ensurepath
           pre-commit run --all-files --color always --show-diff-on-failure
