--- a/actions.yml
+++ b/actions.yml
@@ -679,8 +679,11 @@ pypa/cibuildwheel:
     expires_at: 2025-10-22
     tag: v3.1.1
   9e4e50bd76b3190f55304387e333f6234823ea9b:
-    expires_at: 2050-01-01
+    expires_at: 2025-10-27
     tag: v3.1.2
+  352e01339f0a173aa2a3eb57f01492e341e83865:
+    expires_at: 2050-01-01
+    tag: v3.1.3
 pytooling/actions:
   '*':
     expires_at: 2025-08-01
