Update actions.yml and approved_actions.yml based on .github/workflows/dummy.yml
Generated by .github/workflows/update_actions.yml

--- a/actions.yml
+++ b/actions.yml
@@ -609,8 +609,11 @@ olafurpg/setup-scala:
     keep: true
 opentofu/setup-opentofu:
   592200bd4b9bbf4772ace78f887668b1aee8f716:
-    expires_at: 2050-01-01
+    expires_at: 2025-11-01
     tag: v1
+  000eeb8522f0572907c393e8151076c205fdba1b:
+    expires_at: 2050-01-01
+    tag: v1.0.6
 oracle-actions/setup-java:
   '*':
     expires_at: 2025-08-01
