--- a/actions.yml
+++ b/actions.yml
@@ -155,8 +155,11 @@ aws-actions/configure-aws-credentials:
     expires_at: 2025-09-08
     tag: v4.1.0
   b47578312673ae6fa5b5096b330d9fbac3d116df:
-    expires_at: 2050-01-01
+    expires_at: 2025-11-01
     tag: v4.2.1
+  7474bc4690e29a8392af63c5b98e7449536d5c3a:
+    expires_at: 2050-01-01
+    tag: v4.3.1
 azure/setup-helm:
   5119fcb9089d432beecbf79bb2c7915207344b78:
     expires_at: 2025-09-08
