--- a/actions.yml
+++ b/actions.yml
@@ -297,8 +297,11 @@ cpp-linter/cpp-linter-action:
     expires_at: 2025-09-04
     tag: v2.13.3
   f91c446a32ae3eb9f98fef8c9ed4c7cb613a4f8a:
-    expires_at: 2050-01-01
+    expires_at: 2025-11-07
     tag: v2.15.0
+  0f6d1b8d7e38b584cbee606eb23d850c217d54f8:
+    expires_at: 2050-01-01
+    tag: v2.15.1
 crate-ci/typos:
   '*':
     expires_at: 2025-08-01
