--- a/actions.yml
+++ b/actions.yml
@@ -740,8 +740,11 @@ sbt/setup-sbt:
     expires_at: 2025-10-19
     tag: v1.1.9
   234370af1319038bf8dc432f8a7e4b83078a1781:
-    expires_at: 2050-01-01
+    expires_at: 2025-11-07
     tag: v1.1.11
+  f20dc1bc1f8be605c44ffbcec6f17f708a4af9d1:
+    expires_at: 2050-01-01
+    tag: v1.1.12
 scacap/action-surefire-report:
   1a128e49c0585bc0b8e38e541ac3b6e35a5bc727:
     expires_at: 2050-01-01
