--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -1,5 +1,6 @@
 # This file was generated from actions.yml by gateway/gateway.py. DO NOT UPDATE MANUALLY.
 - 1Password/load-secrets-action@581a835fb51b8e7ec56b71cf2ffddd7e68bb25e0
+- 1Password/load-secrets-action@13f58eec611f8e5db52ec16247f58c508398f3e6
 - ana06/get-changed-files@25f79e676e7ea1868813e21465014798211fad8c
 - apache/*@*
 - bytedeco/javacpp-presets/.github/actions/*@*
