Add new setup-air action version v1.0.0
Signed-off-by: Nic Crane <thisisnic@gmail.com>

--- a/actions.yml
+++ b/actions.yml
@@ -883,3 +883,7 @@ mlugg/setup-zig:
   8d6198c65fb0feaa111df26e6b467fea8345e46f:
     expires_at: 2050-01-01
     tag: v2.0.5
+posit-dev/setup-air:
+  63e80dedb6d275c94a3841e15e5ff8691e1ab237:
+    expires_at: 2050-01-01
+    tag: v1.0.0
