--- a/actions.yml
+++ b/actions.yml
@@ -183,8 +183,11 @@ bnjbvr/cargo-machete:
     expires_at: 2025-10-19
     tag: v0.7.0
   b54422fa3319b3cac180f6030b663fe57af51635:
-    expires_at: 2050-01-01
+    expires_at: 2025-11-17
     tag: v0.8.0
+  7959c845782fed02ee69303126d4a12d64f1db18:
+    expires_at: 2050-01-01
+    tag: v0.9.1
 browser-actions/setup-firefox:
   5b19b18df8c293aae9e77f0a936e9fdc358f543a:
     expires_at: 2025-09-08
