--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -48,6 +48,7 @@
 - betahuhn/repo-file-sync-action@8b92be3375cf1d1b0cd579af488a9255572e4619
 - bnjbvr/cargo-machete@5eaad10acf89fb0c6a31d9b197a2d48ba762d28e
 - bnjbvr/cargo-machete@b54422fa3319b3cac180f6030b663fe57af51635
+- bnjbvr/cargo-machete@7959c845782fed02ee69303126d4a12d64f1db18
 - browser-actions/setup-firefox@5b19b18df8c293aae9e77f0a936e9fdc358f543a
 - browser-actions/setup-firefox@634a60ccd6599686158cf5a570481b4cd30455a2
 - browser-actions/setup-firefox@5914774dda97099441f02628f8d46411fcfbd208
