--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -82,6 +82,7 @@
 - cpp-linter/cpp-linter-action@e3fcb174b19d50de4eae1b46896698a1dd48b094
 - cpp-linter/cpp-linter-action@f91c446a32ae3eb9f98fef8c9ed4c7cb613a4f8a
 - cpp-linter/cpp-linter-action@0f6d1b8d7e38b584cbee606eb23d850c217d54f8
+- cpp-linter/cpp-linter-action@d7155ea6699028b6b09b0457e26b3c5d73f0ed46
 - crate-ci/typos@*
 - crazy-max/ghaction-import-gpg@111c56156bcc6918c056dbef52164cfa583dc549
 - crazy-max/ghaction-import-gpg@e89d40939c28e39f97cf32126055eeae86ba74ec
