--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -185,6 +185,7 @@
 - pypa/cibuildwheel@e6de07ed3921b51089aae6981989889cf1eddd0c
 - pypa/cibuildwheel@9e4e50bd76b3190f55304387e333f6234823ea9b
 - pypa/cibuildwheel@352e01339f0a173aa2a3eb57f01492e341e83865
+- pypa/cibuildwheel@c923d83ad9c1bc00211c5041d0c3f73294ff88f6
 - pytooling/actions@*
 - quarto-dev/quarto-actions@*
 - reactivecircus/android-emulator-runner@*
