--- a/actions.yml
+++ b/actions.yml
@@ -870,7 +870,7 @@ posit-dev/setup-air:
   63e80dedb6d275c94a3841e15e5ff8691e1ab237:
     expires_at: 2050-01-01
     tag: v1.0.0
-BetaHuhn/repo-file-sync-action@v1：
-  8b92be3375cf1d1b0cd579af488a9255572e4619
+BetaHuhn/repo-file-sync-action@v1:
+  8b92be3375cf1d1b0cd579af488a9255572e4619:
     expires_at: 2050-01-01
     tag: v1.21.1
