--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -112,6 +112,7 @@
 - google-github-actions/setup-gcloud@77e7a554d41e2ee56fc945c52dfd3f33d12def9a
 - google-github-actions/setup-gcloud@6a7c903a70c8625ed6700fa299f5ddb4ca6022e9
 - google-github-actions/setup-gcloud@cb1e50a9932213ecece00a606661ae9ca44f3397
+- google-github-actions/setup-gcloud@26f734c2779b00b7dda794207734c511110a4368
 - gr2m/twitter-together@*
 - graalvm/setup-graalvm@01ed653ac833fe80569f1ef9f25585ba2811baab
 - graalvm/setup-graalvm@7f488cf82a3629ee755e4e97342c01d6bed318fa
