--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -236,3 +236,4 @@
 - mlugg/setup-zig@7dccf5e6d09267c55f815f2db29495f30ba2ebca
 - mlugg/setup-zig@8d6198c65fb0feaa111df26e6b467fea8345e46f
 - posit-dev/setup-air@63e80dedb6d275c94a3841e15e5ff8691e1ab237
+- vmactions/freebsd-vm@05856381fab64eeee9b038a0818f6cec649ca17a
